--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="text-gray-900 antialiased bg-gray-100 font-display">
+<html lang="en" class="text-gray-900 antialiased bg-white font-display">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
